Remove margins and spacing from second row top text

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
     padding: 0 200px;
 }
 
+.second {
+    background-color: #3882f6;
+}
+
 .first {
     display: flex;
     flex-direction: column;
@@ -96,4 +100,8 @@ a {
 
 a:link {
     color: white;
+}
+
+.second h3 {
+    margin: 0;
 }
