--- a/style.css
+++ b/style.css
@@ -13,15 +13,19 @@ body {
     padding: 0 200px;
 }
 
-.second {
-    background-color: #3882f6;
-}
-
 .first {
     display: flex;
     flex-direction: column;
     gap: 100px;
     padding-bottom: 200px;
+}
+
+.second {
+    background-color: #3882f6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .header {
@@ -103,5 +107,34 @@ a:link {
 }
 
 .second h3 {
+    margin: 0;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.second .img-card-master {
+    display: flex;
+    gap: 10px;
+}
+
+.img-card {
+    width: 200px;
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+}
+
+.card, .img-card p {
+    flex-basis: 100%;
+}
+
+.card {
+    border: 2px solid #E5E7EB;
+    border-radius: 20px;
+    height: 200px;
+}
+
+.img-card p {
     margin: 0;
 }
