--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ body {
 .first, .fourth {
     background-color: #1F2937;
     color: white;
-    padding: 0px 200px 100px;
+    padding: 0px 5em 2em;
 }
 
 .first {
     display: flex;
     flex-direction: column;
-    gap: 100px;
 }
 
 .second {
@@ -38,6 +37,7 @@ body {
 .hero {
     display: flex;
     align-items: center;
+    padding: 4em 0;
 }
 
 .hero-text, .hero-img {
@@ -49,7 +49,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 10px;
+    gap: 0.5em;
 }
 
 .hero-img {
@@ -60,15 +60,12 @@ body {
 
 .hero-text button {
     align-self: flex-start;
-    margin-top: 10px;
-}
-
-.hero-text button {
+    margin-top: 1em;
     background: #3882f6;
     color: white;
     border-style: none;
-    border-radius: 5px;
-    padding: 10px 15px;
+    border-radius: 0.5em;
+    padding: 1em 1.5em;
 }
 
 .hero-img img {
@@ -94,7 +91,7 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    gap: 30px;
+    gap: 1em;
     font-size: 18px;
     color: #E5E7EB;
 }
