--- a/style.css
+++ b/style.css
@@ -214,3 +214,12 @@ a:link {
     border-radius: 0.5em;
     padding: 0.5em 1.5em;
 }
+
+button:hover {
+    background-color: brown;
+    color: black;
+}
+
+.call-to-action button:hover {
+    border-color: black;
+}
